<resources>
    <string name="app_name">IterTable</string>

    <!-- Actions -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_coll">Delete collection</string>
    <string name="edit_coll_dialog">Rename</string>
    <string name="next">Next</string>
    <string name="edit_item">Edit item</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>

    <!-- Collection names. -->
    <string name="list">List</string>
    <string name="queue">Queue</string>
    <string name="stack">Stack</string>
    <string name="cycle">Cycle</string>
    <string name="checkbox_list">CheckBoxList</string>

    <!-- Messages -->
    <string name="enter_data_toast">You should enter collection type and name!</string>
    <string name="delete_message">Do you really want to delete this collection?</string>
    <string name="empty_collection">No items in collection!</string>
    <string name="new_item_dialog">Create new item</string>
    <string name="new_coll_dialog">Create new collection</string>
    <string name="set_alarm_dialog">Set alarm for this collection. It will pop an element at concrete time.</string>
    <string name="alarm_already_set">Alarm for this collection already set!</string>

    <!-- Content -->
    <string name="collection_name">Your collections:</string>
    <string name="type">Type</string>
    <string name="_0">0.</string>
    <string name="name">Name</string>
    <string name="list_item">List Item</string>
    <string name="colon">%1$s:</string>
    <string name="time_template">%1$d:%2$d</string>
    <string name="date_template">%1$d.%2$d.%3$d</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="nul">Null</string>

    <!-- Broadcasts -->
    <string name="broadcast_alarm">com.livmas.itertable.broadcast_alarm</string>

    <!-- Notifications -->
    <string name="pop_notification">Pop occurred in collection %1$s</string>
    <string name="notification_channel_description">Channel to send app notifications</string>
    <string name="repeating">Repeating</string>
    <string name="repeat_every">Repeat Every:</string>
    <string name="start_at">Start at:</string>
</resources>