<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:visibility="visible">

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="14dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_0"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cbStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:maxWidth="30dp"
        android:minWidth="10dp"
        android:visibility="visible"
        app:checkedState="unchecked" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:text="@string/list_item"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/ibEdit"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:drawable/list_selector_background"
        android:contentDescription="@string/edit_item"
        android:scaleType="fitCenter"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/ibDelete"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:drawable/list_selector_background"
        android:contentDescription="@string/delete_item"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/trash" />

</LinearLayout>